# compr

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish-to-pypi.yml
src/: compr.py
